--- a/static/html/default/templates/inventario/catalogo.html
+++ b/static/html/default/templates/inventario/catalogo.html
@@ -90,7 +90,7 @@
                 <form style="width:450px; float:left; border: solid 1px #d3d3d3; padding: 20px;padding-bottom: 0px;margin-bottom:0px;" id="ft" action="/{systemModuleName}/inventario/salvarCatalogo" method="post" enctype="multipart/form-data">
                     Id catálogo: (0 = Nuevo)
                     <div class="input-control text">
-                        <input type="text" name="id" id="_id"/> 
+                        <input type="text" name="id" value="0" id="_id"/> 
                     </div>
                     <div class="input-control text">
                         <span class="fg-red">*</span> Nombre: <input type="text" name="nombre" id="nombre_" required/>
@@ -106,11 +106,12 @@
                         <input type="text" name="inicio" id="inicio_" required />
                         <button type="button" class="btn-date"></button>
                     </div>
-                    <span class="fg-red">*</span> Fecha de cierre: 
-                    <div id="picker1" class="input-control text" data-role="datepicker"/> 
-                        <input type="text" name="final" id="final_" required/>
+                    <div id="picker1" style="display:none;" class="input-control text" data-role="datepicker"/> 
+                        <input type="text" name="final" id="final_"/>
                         <button type="button" class="btn-date"></button>
                     </div>
+                    <br/>
+                    <br/>
                     <div class="input-control">
                         <input type="file" name="archivo"/>
                     </div>
