--- a/static/html/default/templates/inventario/hoja_retaceo.html
+++ b/static/html/default/templates/inventario/hoja_retaceo.html
@@ -10,7 +10,7 @@
 <div class="panel-content">
 <form action="/inventario/inventario/guardar_hoja_retaceo" method="post">
     <div class="input-control text">
-        <input type="text" placeholder="Numero de documento (0 = nuevo)" name="cod" required/>
+        <input type="text" placeholder="Numero de documento (0 = nuevo)" value="0" name="cod" required/>
     </div>
     <br />
     <div class="input-control text" data-role="datepicker"
