--- a/static/html/default/templates/inventario/revision_de_salida.html
+++ b/static/html/default/templates/inventario/revision_de_salida.html
@@ -6,8 +6,12 @@
 			</div>
 			<div class="panel-content">
 				Ingrese la serie de la factura
-				<div class="input-control text">
-					<input type="text" id="serie"/>
+				<div class="input-control select">
+					<select id="serie">
+                        <!-- START series -->
+                            <option value="{serie}">{serie}</option>
+                        <!-- END series -->
+                    </select>
 				</div>
 				Ingrese el número de factura
 				<div class="input-control text">
