--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -2,48 +2,18 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>
-    </title>
+    <meta charset="UTF-8" />
+    <title></title>
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 </head>
 
 <body class="metro" ng-app="Inventario">
-    <style type="text/css">
-        #blsBScreen {
-            position: fixed;
-            z-index: 1000000;
-            height: 100%;
-            width: 100%;
-            background: #000;
-            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-            filter: alpha(opacity=50);
-            -moz-opacity: 0.5;
-            -khtml-opacity: 0.5;
-            opacity: 0.5;
-            display: none;
-        }
-        
-        #blsMScreen {
-            min-height: 300px;
-            width: 100%;
-            position: fixed;
-            z-index: 1000001;
-            margin-top: 150px;
-            display: none;
-        }
-        
-        #blsMessage {
-            margin: 0 auto;
-            margin-top: 100px;
-        }
-    </style>
     <noscript>
         Para que el sistema trabaje correctamente necesita tener activado Javascript,
         si usted puede leer este mensaje significa que javascript se encuentra desactivado.
         Active Javascript y recarge la p&aacute;gina; si no sabe como activarlo contacte 
         con el administrador.
-        </noscript>
+    </noscript>
     <div id="blsBScreen"></div>
     <div id="blsMScreen" class="bg-blue">
         <div id="blsMessage" class="span5">
@@ -52,9 +22,9 @@
                 <br />
                 <br />
             </p>
-            <div style="text-align: center;"><img src="../static/img/loader_screen.gif" style="width: 32px;"></div>
         </div>
     </div>
+
     <script>
         function porfavor_espere() {
             $('#blsBScreen').css('display', 'blocK');
@@ -66,76 +36,11 @@
             $('#blsMScreen').css('display', 'none');
         }
 
-        $(document).ready(function() {
-            //var noti = setInterval( notificaciones , 1000 );
-            //var bloq = setInterval( bloqueo , 500 );
-
-
-            /* INBOX */
-            /*setInterval(function(){
-
-                var uri = "/nymsa/modulo/inboxPendientes";
-                $.post(uri, {}, function(resp){
-
-                    $("#inboxPending").html(resp.noleidos);
-
-                },"json");
-
-            }, 500);*/
-
-            var messages_handler = new url_handler();
-            messages_handler.initialize();
-            if (messages_handler.isKey('error')) {
-
-                if (messages_handler.getValue('error') == 1530) {
-                    $.Dialog({
-                        overlay: true,
-                        shadow: true,
-                        flat: true,
-                        icon: '<i class="icon-warning"></i>',
-                        title: 'ACCESO RESTRINGIDO',
-                        content: '',
-                        onShow: function(_dialog) {
-                            var content = _dialog.children('.content');
-                            content.html('<p style="padding: 15px;">No posee autorización para visualizar el contenido</p>');
-                        }
-                    });
-                }
-            }
-        });
-
-        function inboxPreview() {
-            var uri = "/nymsa/modulo/inboxPreview";
-
-            $.post(uri, {}, function(mensajes) {
-                agregarMensajes(mensajes);
-            }, "json");
-        }
-
-        function agregarMensajes(mensajes) {
-            $('#loader').remove();
-
-            for (var i = 0; i < mensajes.length; i++) {
-                if (mensajes[i].leido == 1) {
-                    var li = $('<li style="padding: 5px;" onclick="readInbox(' + mensajes[i].id + ')"><p>' + mensajes[i].titulo + '</p><span style="color: #636363; font-size: 10px;">De: ' + mensajes[i].remitente + ' - Enviado el: ' + mensajes[i].fecha + '</span></li>');
-                    $('#bandeja').append(li);
-                } else {
-                    var li = $('<li style="padding: 5px;" onclick="readInbox(' + mensajes[i].id + ')"><p style="font-weight: bold;">' + mensajes[i].titulo + ' (Sin leer)</p><span style="color: #636363; font-size: 10px;">De: ' + mensajes[i].remitente + ' - Enviado el: ' + mensajes[i].fecha + '</span></li>');
-                    $('#bandeja').append(li);
-                }
-            }
-        }
-
-        function readInbox(id) {
-            location.href = "/nymsa/modulo/inboxRead?inboxId=" + id;
-        }
-
-
         function ver_detalle_producto() {
-
             window.open('/{systemModuleName}/inventario/detalle_de_producto?estilo=' + $('#navBusquedaProducto').val(), '_blank');
         }
     </script>
+
     <div>
         <nav class="navigation-bar light fixed-top shadow">
             <nav class="navigation-bar-content">
@@ -152,31 +57,43 @@
                         <li>
                             <a href="/{systemModuleName}/inventario/segmentacion"><i class="icon-list"></i> Segmentación</a>
                         </li>
-                        <!--<li>
-                                <a href="/{systemModuleName}/inventario/proveedores"><i class="icon-user-2"></i> Proveedores</a>
-                            </li>-->
                         <li>
                             <a href="/{systemModuleName}/inventario/bodegas"><i class="icon-box"></i> Bodegas</a>
                         </li>
-                        <li><a href="/{systemModuleName}/inventario/catalogos"><i class="icon-broadcast"></i> Campañas</a></li>
                         <li>
-                            <a class="dropdown-toggle" href="#"><i class="icon-basket"></i> Productos</a>
+                            <a href="/{systemModuleName}/inventario/catalogos"><i class="icon-broadcast"></i> Campañas</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-toggle" href="#">
+                                <i class="icon-basket"></i> Productos
+                            </a>
                             <ul class="dropdown-menu" data-role="dropdown">
-                                <li><a href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-file"></i> Nuevo producto</a></li>
-                                <li><a href="/{systemModuleName}/inventario/resumenGeneralProducto"><i class="icon-book"></i> Catálogo</a></li>
-                                <li><a href="/{systemModuleName}/inventario/productoEntrante"><i class="icon-cycle"></i> En tránsito</a></li>
+                                <li>
+                                    <a href="/{systemModuleName}/inventario/nuevo_producto"><i class="icon-file"></i> Nuevo producto</a>
+                                </li>
+                                <li>
+                                    <a href="/{systemModuleName}/inventario/resumenGeneralProducto"><i class="icon-book"></i> Catálogo</a>
+                                </li>
+                                <li>
+                                    <a href="/{systemModuleName}/inventario/productoEntrante"><i class="icon-cycle"></i> En tránsito</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
-                            <a class="dropdown-toggle" href="#"><i class="icon-tab"></i> Transacciones</a>
+                            <a class="dropdown-toggle" href="#">
+                                <i class="icon-tab"></i> Transacciones
+                            </a>
                             <ul class="dropdown-menu" data-role="dropdown">
-                                <li><a href="/{systemModuleName}/inventario/traslados">Traslados</a></li>
-                                <li><a href="/{systemModuleName}/inventario/listadoTraslado">Historial de traslados</a></li>
+                                <li>
+                                    <a href="/{systemModuleName}/inventario/traslados">Traslados</a>
+                                </li>
+                                <li>
+                                    <a href="/{systemModuleName}/inventario/listadoTraslado">Historial de traslados</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
                 </div>
-
 
                 <div class="element">
                     <a class="dropdown-toggle" href="#"><i class="icon-plus-2"></i> Más</a>
@@ -215,7 +132,6 @@
                         <span class="icon-cog"></span> &nbsp;&nbsp;&nbsp;
                     </a>
                     <ul class="dropdown-menu place-right" data-role="dropdown">
-                        <!--<li><a href="/{systemModuleName}/modulo/cuenta">Cuenta</a></li>-->
                         <li><a href="/{systemModuleName}/logout/user">Salir</a></li>
                     </ul>
                 </div>
