fix para presetacion

--- a/static/html/default/templates/inventario/traslado_detalle.html
+++ b/static/html/default/templates/inventario/traslado_detalle.html
@@ -90,9 +90,9 @@
             
     var gridOptionInventario = {
         id : grid_inventario,
-        loadURL : '/inventario/inventario/CargarEstadoInventario?linea=0&estilo=0&color=0&proveedor=0&bodega=0',
+        loadURL: '/inventario/inventario/CargarEstadoInventario?linea=0&estilo=0&color=0&proveedor=0&bodega_origen=0&bodega_destino=0&cod=',
         saveURL : '',
-        width: "100%", //"100%", // 700,
+        width: "665", //"100%", // 700,
         height: "329", //"100%", // 330,
         container : 'gridbox',
         replaceContainer : true,
@@ -104,7 +104,7 @@
         clickStartEdit : true,
         remotePaging : true,
         autoLoad: false,
-        pageSize:10,
+        pageSize:100,
         toolbarContent : 'reload | filter | nav state'
     };
             
@@ -143,8 +143,8 @@
         id : grid_demo2_id,
         loadURL: '/inventario/inventario/VerDetalleTraslado?id={idencabezado}',
         saveURL : '',
-        width: "645", //"100%", // 700,
-        height: "260", //"100%", // 330,
+        width: "655", //"100%", // 700,
+        height: "275", //"100%", // 330,
         container : 'gridbox2',
         replaceContainer : true,
         encoding : 'UTF-8', // Sigma.$encoding(), 
@@ -154,7 +154,7 @@
         columns : colsOption2,
         clickStartEdit : true,
         defaultRecord : {'id':"00", 'nombre':""},
-        pageSize:10,
+        pageSize:100,
         toolbarContent : 'reload | filter | nav state'
     };
 
@@ -254,7 +254,7 @@
                     <br />
                 </div>
             </div>
-            <div class="panel span9">
+            <div class="panel span10">
                 <!-- GRID PRINCIPAL -->
                 <div class="panel-header">
                     &nbsp;&nbsp;&nbsp;&nbsp;Tipo de transacción: {{vm.DatosTraslado.transaccion}} | 
