--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -78,14 +78,16 @@
                 <div class="element">
                     <a class="dropdown-toggle" href="#">Utilería</a>
                     <ul class="dropdown-menu" data-role="dropdown">
-                        <li><a href="{REPORT_URL}=/Kardex/Kardex+-+Informe" target="_blank"><i class="icon-clipboard"></i> Kardex</a></li>
+                        <li><a href="{REPORT_URL}Kardex/Catalogo" target="_blank">Catálogo de productos</a></li>
                         <li>
                             <a href="#" class="dropdown-toggle"><i class="icon-printer"></i> Reportes</a>
                             <ul class="dropdown-menu" data-role="dropdown">
                                 <!--<li><a href="">Inventarios</a></li>
                                 <li><a href="">Entradas y salidas (mes)</a></li>-->
-                                <li><a href="{REPORT_URL}=/Reportes+administrativos/ReporteVentas_porfecha" target="_blank">Ventas</a></li>
-                                <li><a href="{REPORT_URL}=/Kardex/Catalogo" target="_blank">Catálogo</a></li>
+                                <li><a href="{REPORT_URL}Kardex/Kardex - Informe" target="_blank"><i class="icon-clipboard"></i> Informe de Kardex</a></li>
+                                <li><a href="{REPORT_URL}Reportes administrativos/ReporteVentas_porfecha" target="_blank">Ventas por fecha</a></li>
+                                <li><a href="{REPORT_URL}Reportes administrativos/ReporteVentas_porcatalogo" target="_blank">Ventas por catálogo</a></li>
+                                <li><a href="{REPORT_URL}Reportes administrativos/ReporteVentas_comparativoda" target="_blank">Comparativo de venta</a></li>
                                 <!--<li><a href="/inventario/inventario/productoEntrante">En tránsito</a></li>-->
                             </ul>
                         </li>
