--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -6,7 +6,7 @@
     <title></title>
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 </head>
-<body class="metro" ng-app="Inventario">
+<body class="metro" ng-app="ERPapp">
     <noscript>
         Para que el sistema trabaje correctamente necesita tener activado Javascript,
         si usted puede leer este mensaje significa que javascript se encuentra desactivado.
