--- a/static/html/default/templates/inventario/FormularioCategoria.html
+++ b/static/html/default/templates/inventario/FormularioCategoria.html
@@ -11,7 +11,7 @@
     }
 
     var colsOption = [{
-            id: 'id_categoria_especifica',
+            id: 'serialnumber',
             header: "ID",
             width: 92
         }, {
