--- a/static/html/default/templates/inventario/catalogo.html
+++ b/static/html/default/templates/inventario/catalogo.html
@@ -13,7 +13,7 @@
     };
 
     var colsOption_catalogo = [
-        { id: 'id', header: "Id", width: 50 },
+        { id: 'serialnumber', header: "Id", width: 50 },
         { id: 'nombre', header: "Nombre", width: 150 },
         { id: 'descripcion', header: "Descripcion", width: 220 },
         { id: 'inicio', header: "Fecha de inicio", width: 100 },
